--- a/competition.html
+++ b/competition.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="author" content="Исупов Андрей">
+    <meta name="author" content="Койков Антон">
     
-    <title>Участие в соревнованиях</title>
+    <title>Достижения</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.css">
@@ -17,7 +17,7 @@
 <body id='body'>
     
     <nav class="navbar">
-        <label class="logo">Соревнования</label>
+        <label class="logo">Достижения</label>
         <section class="nav-links">
             <a href="index.html">На главную</a>
             <a href="resume.html">Резюме</a>
@@ -26,7 +26,7 @@
     </nav>
 
     <main class="competition">
-        <h1>За время учебы в университете я еще не участвовал в соревнованиях или олимпиадах, и могу рассказать про достижения в школьной жизни</h1>
+        <h2 class = "h-comp1">За время учебы в университете я еще не участвовал в соревнованиях или олимпиадах, и могу рассказать про достижения в школьной жизни</h2>
         <p id ="h-comp">Участие в спортивных мероприятиях: </p>
         <ul class = "h-list">
             <li>Три последних года в школе участвовал в военно патриотической игре "Зарница", 2 раза в качестве командира команды. В личном первенстве занимал 1 и 2 места за физическую подготовку или разборку/сборку автомата.</li>
