--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="author" content="Исупов Андрей">
+    <meta name="author" content="Койков Антон">
 
     <title>Резюме</title>
 
@@ -20,7 +20,7 @@
         <section class="nav-links">
             <a href="index.html">На главную</a>
             <a href="gallery.html">Галерея</a>
-            <a href="competition.html">Соревнования</a>
+            <a href="competition.html">Достижения</a>
         </section>
     </nav>
 
