--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
         <section class="nav-links">
             <a href="index.html">На главную</a>
             <a href="resume.html">Резюме</a>
-            <a href="competition.html">Соревнования</a>
+            <a href="competition.html">Достижения</a>
         </section>
     </nav>
 
