--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="nav-links">
             <a href="resume.html">Резюме</a>
             <a href="gallery.html">Галерея</a>
-            <a href="competition.html">Соревнования</a>
+            <a href="competition.html">Достижения</a>
         </section>
     </nav>
 
