--- a/competition.html
+++ b/competition.html
@@ -27,14 +27,21 @@
 
     <main class="competition">
         <h2 class = "h-comp1">За время учебы в университете я еще не участвовал в соревнованиях или олимпиадах, и могу рассказать про достижения в школьной жизни</h2>
-        <p id ="h-comp">Участие в спортивных мероприятиях: </p>
+        <p class ="h-comp"><i>Участие в спортивных мероприятиях: </i></p>
         <ul class = "h-list">
             <li>Три последних года в школе участвовал в военно патриотической игре "Зарница", 2 раза в качестве командира команды. В личном первенстве занимал 1 и 2 места за физическую подготовку или разборку/сборку автомата.</li>
             <li>Участие в 11 классе в соревнованиях по пауэрлифтингу в нашей школе, занял 2 место в своей весовой категории</li> 
             <li>Участвовал в соревнованиях ТурСлета, школьном и районном этапах.</li>
             <li>В 11 классе участвовал в соревнованиях по стрельбе из пневматической винтовки, команда нашей школы одержала победу по сумме очков</li>
         </ul>  
-        <img >   
+        <main class='competitionimg'>
+            <p class="h-comp"><i>Некоторые фотографии этих соревнований</i></p>
+            <section>
+                <img src="img/imgc1.jpg" alt="фото">
+                <img src="img/imgc2.jpg" alt="фото">
+                <img src="img/imgc3.jpg" alt="фото">
+                <img src="img/imgc4.jpg" alt="фото">
+            </section>  
     </main>
 
 </body>
