--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
     <title>Галерея</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.jpg">
+    <link rel="icon" href="fovicon.jpg">
 </head>
 
 <body id='body'>
@@ -27,14 +27,14 @@
     <main class='gallery'>
         <p class="text"><i>Немного моих любимых фото:</i></p>
         <section>
-            <img src="img/img5.jpg" >
-            <img src="img/img4.jpg" >
-            <img src="img/img9.jpg" >
-            <img src="img/img8.jpg" >
-            <img src="img/img10.jpg" >
-            <img src="img/img6.jpg" >
-            <img src="img/img7.jpg" >
-            <img src="img/img12.jpg" >
+            <img src="img/img5.jpg" alt = "Фото">
+            <img src="img/img4.jpg" alt = "Фото">
+            <img src="img/img9.jpg" alt = "Фото">
+            <img src="img/img8.jpg" alt = "Фото">
+            <img src="img/img10.jpg" alt = "Фото">
+            <img src="img/img6.jpg" alt = "Фото">
+            <img src="img/img7.jpg" alt = "Фото">
+            <img src="img/img12.jpg" alt = "Фото">
         </section>
     </main>
 
