--- a/competition.html
+++ b/competition.html
@@ -10,7 +10,7 @@
     <title>Достижения</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.jpg">
+    <link rel="icon" href="fovicon.jpg">
 
 </head>
 
