--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Моё портфолио</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.jpg">
+    <link rel="icon" href="fovicon.jpg">
 </head>
 
 <body>
