--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <title>Резюме</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.jpg">
+    <link rel="icon" href="fovicon.jpg">
 </head>
 
 <body id='body'>
